--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -27,8 +27,8 @@
 
         
         <div class="nav-item px-3">
-        <NavLink class="nav-link" href="weather">
-                <span class="oi oi-cloud-upload" aria-hidden="true"></span> Carica file
+        <NavLink class="nav-link" href="upload">
+                <span class="oi oi-cloud-upload" aria-hidden="true"></span> UpLoad Files
         </NavLink>
         </div>
 
